solved layout bug

--- a/style.css
+++ b/style.css
@@ -379,3 +379,57 @@ p {
   margin: 3em auto 1em;
   text-align: center;
 }
+
+/* ----------------------------------------------------- */
+/* MEDIA QUERIES */
+/* ----------------------------------------------------- */
+
+@media (min-width: 500px) {
+  .container {
+    max-width: 450px;
+  }
+}
+
+@media (min-width: 800px) {
+  .container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+    width: 90%;
+  }
+
+  .aside--col {
+    width: 37%;
+  }
+
+  .main--col {
+    width: 60%;
+  }
+
+  .frontend--and--design {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 0.75em;
+  }
+  .card {
+    width: 100%;
+  }
+
+  .level--bar--background {
+    width: 95%;
+  }
+  .project--buttons {
+    margin: 2em 0 1em;
+    display: flex;
+    justify-content: flex-start;
+    gap: 0.7em;
+    width: 80%;
+  }
+
+  .btn {
+    /* display: inline-block; */
+    width: 35%;
+    padding: 0.8em 1.3em;
+  }
+}
